--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container__captive-page">
       <div class="captive-page__colums">
         <div class="captive-page__logo">
-          <img src="./f/i/captive-page/Portal.svg" alt="">
+          <img src="./f/i/captive-page/logo.svg" alt="">
           <p>
             Добро пожаловать в бортовую систему развлечений
           </p>
